syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package registro;

service RegistroService {
  rpc CreateVoter (CreateVoterRequest) returns (CreateVoterReply);
  rpc GetVoter (GetVoterRequest) returns (GetVoterReply);
}

message CreateVoterRequest {
  string name = 1;
  string document = 2;
}

message CreateVoterReply {
  string voterId = 1;
  string message = 2;
}

message GetVoterRequest {
  string voterId = 1;
}

message GetVoterReply {
  string voterId = 1;
  string name = 2;
  string document = 3;
}
